start reading a video file

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,8 @@
 project('player', 'cpp', default_options: [ 'cpp_std=c++14' ])
 
+libav = subproject('av-cpp')
+libavdep = libav.get_variable('avcpp_dep')
+
 # Player
 executable('player', [
             'src/player.cpp',
@@ -7,4 +10,6 @@ executable('player', [
 	    'vc/gl.cpp'
           ],
 	   dependencies : [ dependency('sdl2'),
-			    dependency('glesv2') ])
+			    dependency('glesv2'),
+			    dependency('threads'),
+			    libavdep ])
