--- a/meson.build
+++ b/meson.build
@@ -3,13 +3,14 @@ project('player', 'cpp', default_options: [ 'cpp_std=c++14' ])
 libav = subproject('av-cpp')
 libavdep = libav.get_variable('avcpp_dep')
 
+libvc = subproject('libvc')
+libvcdep = libvc.get_variable('libvc_dep')
+
 # Player
 executable('player', [
-            'src/player.cpp',
-            'vc/sdl.cpp',
-	    'vc/gl.cpp'
+            'src/player.cpp'
           ],
 	   dependencies : [ dependency('sdl2'),
 			    dependency('glesv2'),
 			    dependency('threads'),
-			    libavdep ])
+			    libavdep, libvcdep ])
