add vaapi interop support

--- a/meson.build
+++ b/meson.build
@@ -12,4 +12,5 @@ executable('player', [
           ],
 	   dependencies : [ dependency('sdl2'),
 			    dependency('threads'),
+			    dependency('libva'),
 			    libavdep, libvcdep ])
