add cuda interop support

--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,9 @@ libavdep = libav.get_variable('avcpp_dep')
 libvc = subproject('libvc')
 libvcdep = libvc.get_variable('libvc_dep')
 
+cudadep = declare_dependency(dependencies:
+			       meson.get_compiler('cpp').find_library('libcuda'))
+
 # Player
 executable('player', [
             'src/player.cpp'
@@ -13,4 +16,5 @@ executable('player', [
 	   dependencies : [ dependency('sdl2'),
 			    dependency('threads'),
 			    dependency('libva'),
+			    cudadep,
 			    libavdep, libvcdep ])
