compile without cuda if not found

--- a/meson.build
+++ b/meson.build
@@ -1,20 +1,21 @@
 project('player', 'cpp', default_options: [ 'cpp_std=c++14' ])
 
 libav = subproject('av-cpp')
-libavdep = libav.get_variable('avcpp_dep')
-
 libvc = subproject('libvc')
-libvcdep = libvc.get_variable('libvc_dep')
 
-cudadep = declare_dependency(dependencies:
-			       meson.get_compiler('cpp').find_library('libcuda'))
+args = []
+dependencies = [ dependency('sdl2'),
+		 dependency('threads'),
+		 dependency('libva'),
+		 libav.get_variable('avcpp_dep'),
+		 libvc.get_variable('libvc_dep') ]
+
+cudalib = meson.get_compiler('cpp').find_library('libcuda', required : false)
+if cudalib.found()
+  dependencies += declare_dependency(dependencies : cudalib)
+  args += '-DHAVE_CUDA'
+endif
 
 # Player
-executable('player', [
-            'src/player.cpp'
-          ],
-	   dependencies : [ dependency('sdl2'),
-			    dependency('threads'),
-			    dependency('libva'),
-			    cudadep,
-			    libavdep, libvcdep ])
+executable('player', 'src/player.cpp',
+	   dependencies : dependencies, cpp_args : args)
