--- a/meson.build
+++ b/meson.build
@@ -6,7 +6,6 @@ libvc = subproject('libvc')
 args = []
 dependencies = [ dependency('sdl2'),
 		 dependency('threads'),
-		 dependency('libva'),
 		 libav.get_variable('avcpp_dep'),
 		 libvc.get_variable('libvc_dep') ]
 
@@ -14,6 +13,12 @@ cudalib = meson.get_compiler('cpp').find_library('libcuda', required : false)
 if cudalib.found()
   dependencies += declare_dependency(dependencies : cudalib)
   args += '-DHAVE_CUDA'
+endif
+
+vadep = dependency('libva', required : false)
+if vadep.found()
+  dependencies += vadep
+  args += '-DHAVE_VA'
 endif
 
 # Player
