remove submodules and small updates

--- a/meson.build
+++ b/meson.build
@@ -1,13 +1,15 @@
-project('player', 'cpp', default_options: [ 'cpp_std=c++14' ])
+project('player', 'cpp', default_options: [ 'cpp_std=c++17', 'werror=true' ])
 
 libav = subproject('av-cpp')
 libvc = subproject('libvc')
 
 args = []
-dependencies = [ dependency('sdl2'),
-                 dependency('threads'),
-                 libav.get_variable('avcpp_dep'),
-                 libvc.get_variable('libvc_dep') ]
+dependencies = [
+  dependency('sdl2'),
+  dependency('threads'),
+  libav.get_variable('avcpp_dep'),
+  libvc.get_variable('libvc_dep'),
+]
 
 cudalib = meson.get_compiler('cpp').find_library('libcuda', required : false)
 if cudalib.found()
